# SignalVault

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  TODO.md  design.md  pyproject.toml  ruff.toml
.github/workflows/: test.yml
data/: user_settings.example.json
data/subtitles/: sample.vtt
data/validation/: channel_source_real_validation_20260604_1155.md
docs/: ARCHITECTURE.md  C2_ACCEPTANCE_REPORT.md  C2_FRONTEND_QA_REPORT.md  C3_ACCEPTANCE_REPORT.md  C3_FIRST_RUN_ONBOARDING_PLAN.md  C3_VAULT_SETUP_MIGRATION_PLAN.md  CONFIGURATION_ARCHITECTURE_PLAN.md  CONFIGURATION_AUDIT.md  DEV_GUIDE.md  DIAGNOSTIC_BUNDLE_DESIGN.md  ERROR_TAXONOMY_DESIGN.md  FRONTEND_EXPERIENCE_EXECUTION_PLAN.md  FRONTEND_PHASE8_VALIDATION.md  INGEST_QUEUE_DESIGN.md  LIGHTWEIGHT_GRAPH_DESIGN.md  LLM_WIKI_ANALYSIS.md  M1_SDIST_CONTENTS.txt  M1_WHEEL_ACCEPTANCE_REPORT.md  M1_WHEEL_CONTENTS.txt  M2_LAUNCHER_ACCEPTANCE_REPORT.md  M2_WINDOWS_UX_QA_REPORT.md  M3A_BRIEFCASE_SPIKE_REPORT.md  MACOS_PACKAGING_AUDIT.md  MACOS_RELEASE_ENGINEERING_PLAN.md  MCP_SERVER_DESIGN.md  OPERATION_LOG_DESIGN.md  P3_ACCEPTANCE_REPORT.md  P3_PLAN.md  P4_ACCEPTANCE_REPORT.md  P4_PDF_INGESTION_PLAN.md  P5_ACCEPTANCE_REPORT.md  P5_SEARCH_GRAPH_PLAN.md  P6_ACCEPTANCE_REPORT.md  P6_ZSXQ_CONNECTOR_PLAN.md  P7_ACCEPTANCE_REPORT.md  P7_RELIABILITY_DIAGNOSTICS_PLAN.md  PDF_EXTRACTION_DESIGN.md  PROJECT_RULES.md  RELEASE_CHECKLIST.md  RELEASE_ENGINEERING_AUDIT.md  (+7 more)
docs/ui_prototypes/: README.md  guided_import.html  investment_radar.html  knowledge_search.html  prototype.css  source_workbench.html
scripts/: audit_knowledge_graph.py  diagnose_clean_vault.py  validate_deep_notes_import.py  validate_real_clean_flow.py  validate_rerun.py
src/podcast_research/: __main__.py  cli.py  config.py  evaluation.py  logging_config.py
src/podcast_research/adapters/: allin_zh_notes.py  base.py  channel_video_adapter.py  external_html_notes.py  generic_web_page.py  youtube_transcript.py
src/podcast_research/analysis/: chunking.py  models.py  pipeline.py
src/podcast_research/api/: app.py  schemas.py
src/podcast_research/claim_signal/: __init__.py  extractor.py  generator.py  review.py
src/podcast_research/db/: channel_repository.py  fts.py  knowledge_graph.py  models.py  repository.py  (+2 more)
src/signalvault/: __init__.py  __main__.py  app.py  cli.py  config.py  config_store.py  evaluation.py  launcher.py  logging_config.py
tests/: conftest.py  test_api_health.py  test_api_reports.py  test_api_search.py  test_c2a_ai_settings.py  test_c2b_obsidian_settings.py  test_c2c_settings_center.py  test_c3_onboarding.py  test_canonicalize.py  test_channels.py  test_chunking.py  test_claim_signal.py  test_claim_signal_consolidation.py  test_claim_signal_review.py  test_clean_e2e_obsidian.py  test_cleaner.py  test_cli.py  test_cli_reports.py  test_config.py  test_dashboard_perf.py  test_dashboard_perf_large.py  test_db.py  test_deep_notes.py  test_diagnostic_bundle.py  test_diagnostics_errors.py  test_diagnostics_summary.py  test_eval.py  test_external_fetch_reliability.py  test_external_html_notes.py  test_filename_sanitize.py  test_fts.py  test_ingest_jobs.py  test_job_persistence.py  test_knowledge_graph.py  test_knowledge_quality_audit.py  test_launcher.py  test_llm_wiki.py  test_mcp_server.py  test_obsidian.py  test_openai_provider.py  (+38 more)
(+252 files in other folders)
