[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalvault"
version = "0.1.0"
description = "SignalVault — 多源投资研究助手，结构化提取投资观点、标的、风险与信号"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12,<0.27",
    "pydantic>=2.6",
    "sqlalchemy>=2.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "youtube-transcript-api>=0.6",
    "yt-dlp>=2024.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "python-multipart>=0.0.20",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "mcp>=1.0",
    "pdfplumber>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "playwright>=1.50",
    "ruff==0.15.21",
    "reportlab>=4.0",
]

[project.scripts]
signalvault = "signalvault.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
signalvault = [
    "web/templates/**/*.html",
    "web/static/*.css",
    "web/static/*.js",
    "web/static/*.svg",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# ── M3-A: Briefcase Spike ──────────────────────────────────────────────────
# Minimal configuration for macOS .app skeleton feasibility.
# Does NOT imply: signing, notarization, DMG, auto-update, or release packaging.

[tool.briefcase]
project_name = "SignalVault"
bundle = "com.kinosai.signalvault"
version = "0.1.0"
license = "MIT"
license_files = ["LICENSE"]
url = "https://github.com/kinosai9/SignalVault"
author = "Kinosai"

[tool.briefcase.app.signalvault]
formal_name = "SignalVault"
description = "多源投资研究助手"
entry_point = "signalvault.app:main"
sources = ["src/signalvault"]
# requires is intentionally left empty so Briefcase reads from
# [project.dependencies].  Do NOT duplicate the dependency list here.
requires = []

[tool.briefcase.app.signalvault.macOS]
# macOS-specific: arm64 only, minimum macOS 12 (Monterey)
requires = []
universal_build = false
arch = "arm64"
min_os_version = "12.0"